# Gstreamer

./: dot.h  music.flac  title.srt
Advance/: metadata.c
Advance/Oggplayer/: CMakeLists.txt  cmake_bulid.sh
Advance/Oggplayer/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
Advance/Oggplayer/include/: dot.h  player.h
Advance/Oggplayer/output/: CMakeCache.txt  Makefile  cmake_install.cmake  oggplayer
Advance/Oggplayer/src/: CMakeLists.txt  main.c  player.c
Advance/mp4player/: CMakeLists.txt  main.c  makefile  player  player_mp4.c  player_mp4.h
Advance/mp4player/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
Advance/mp4player/output/: mp4player
Advance/mp4player/src/: CMakeLists.txt  main.c  player_mp4.c
Advance/thumbTest/: README.md  main.c  thumbnail.c  thumbnail.h
Advance/webmplyaer/: player_webm.c  task
basic-tutorial/: basic-tutorial-12.c  basic-tutorial-3.c  basic-tutorial-7.c  basic-tutorial-8.c  basic-tutorial-9.c  basic-tutorial-9_Extend.c  task
playback/: makefile  playback-tutorial-1.c  playback-tutorial-1_Extend.c  playback-tutorial-2.c  playback-tutorial-3.c  playback-tutorial-4.c  playback-tutorial-6.c  task
test/: definequeue.cpp
